--- a/ReliableUDP/ReliableUDP.vcxproj
+++ b/ReliableUDP/ReliableUDP.vcxproj
@@ -139,7 +139,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="loadAndStore.cpp" />
     <ClCompile Include="ReliableUDP.cpp" />
+    <ClCompile Include="sendAndRecieve.cpp" />
+    <ClCompile Include="validate.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Net.h" />
