added rough machansim to send files

--- a/ReliableUDP/ReliableUDP.vcxproj
+++ b/ReliableUDP/ReliableUDP.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="validate.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="functionPrototypes.h" />
     <ClInclude Include="Net.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
