--- a/ReliableUDP/ReliableUDP.vcxproj.filters
+++ b/ReliableUDP/ReliableUDP.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="Net.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="functionPrototypes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
