--- a/ReliableUDP/ReliableUDP.vcxproj
+++ b/ReliableUDP/ReliableUDP.vcxproj
@@ -139,13 +139,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="loadAndStore.cpp" />
+    <ClCompile Include="dataParsing.cpp" />
     <ClCompile Include="ReliableUDP.cpp" />
-    <ClCompile Include="sendAndRecieve.cpp" />
-    <ClCompile Include="validate.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="functionPrototypes.h" />
     <ClInclude Include="Net.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
